
#cargo-features = ["strip"]
[package]
edition = "2018"
name = "examples"
publish = false
version = "0.0.0"
[dependencies]
failure = "0.1"
futures = {version = "0.3", default-features = false, features = ["std", "async-await"]}
rust_network = {version = "0.1.0", path = "../rust-network"}
tokio = {version = "1.0", default-features = false, features = ["net", "sync", "time"]}
tokio-util = {version = "0.6", features = ["codec", "net"]}

[dev-dependencies.tokio]
default-features = false
features = ["macros", "test-util", "net", "rt", "rt-multi-thread", "sync", "time"]
version = "1.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
#strip = "symbols"
[[example]]
name = "clients-test"
path = "clients-test.rs"

[[example]]
name = "server-test"
path = "server-test.rs"
