[package]
authors = ["OPQBOT"]
edition = "2018"
name = "rust_network"
version = "0.1.0"
description = "rust网络框架多tcp客户端掉线重连继承lua插件适用于自定义协议IM或GAME或私有协议客户端"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
failure = "0.1"
futures = {version = "0.3", default-features = false, features = ["std", "async-await"]}
hex = {version = "0.4.2"}
mlua = {version = "0.5.3", features = ["vendored", "lua54", "async"]}
nom = "6.1"
rand_core = {version = "0.5", features = ["getrandom"]}
tokio = {version = "1.0", default-features = false, features = ["net", "sync", "time"]}
tokio-util = {version = "0.6", features = ["codec", "net"]}

[dev-dependencies.tokio]
default-features = false
features = ["macros", "test-util", "net", "rt", "rt-multi-thread", "sync", "time"]
version = "1.0"
